tests/scripts/type_errors/term_returns_string.roto
fn bar() -> bool {
    return "hello"
}

fn foo() {}
